Properly pass React ref to Flavor Map component; fix undefined object in reduce method of data reducer

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
 		<title>Flavor Map</title>
 		<meta name="description" content="Flavor Map">
 		<meta name="author" content="Brett Fouss, Jack Vallerie">
-		<link rel="stylesheet" href="semantic-build/dist/semantic.min.css">
+		<link rel="stylesheet" href="/dist/semantic.min.css">
 	</head>
 	<body>
         <div id="app"></div>
-		<script src="../dist/bundle.js"></script>
+		<script src="dist/bundle.js"></script>
 	</body>
 </html>
