--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
 		<meta name="description" content="Flavor Map">
 		<meta name="author" content="Brett Fouss, Jack Vallerie">
 	</head>
-	<body>
-        <div id="app"></div>
+	<body style="margin: 0px; padding: 0px; border; none;">
+		<div id="app"></div>
 		<script src="dist/bundle.js"></script>
 	</body>
 </html>
