Add legend, style drilldown, integrate fonts, fix bugs, small UX improvements

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Flavor Map">
 		<meta name="author" content="Brett Fouss, Jack Vallerie">
 	</head>
-	<body style="margin: 0px; padding: 0px; border; none;">
+	<body style="margin: 0px; padding: 0px; border; none; background: linear-gradient(90deg, #FAFAFA calc(22px - 2px), transparent 1%) center, linear-gradient(#FAFAFA calc(22px - 2px), transparent 1%) center, #EEEEEE; background-size: 22px 22px;">
 		<div id="app"></div>
 		<script src="dist/bundle.js"></script>
 	</body>
