--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -6,8 +6,8 @@
 		<meta name="description" content="Flavor Map">
 		<meta name="author" content="Brett Fouss, Jack Vallerie">
 	</head>
-	<body style="margin: 0px; padding: 0px; border; none;">
-    <div id="app"></div>
+	<body style="margin: 0px; padding: 0px; border; none; background: linear-gradient(90deg, #FAFAFA calc(22px - 2px), transparent 1%) center, linear-gradient(#FAFAFA calc(22px - 2px), transparent 1%) center, #EEEEEE; background-size: 22px 22px;">
+		<div id="app"></div>
 		<script src="bundle.js"></script>
 	</body>
 </html>
